--- a/.github/workflows/workflow_K6.yaml
+++ b/.github/workflows/workflow_K6.yaml
@@ -1,9 +1,12 @@
 name: Teste de Carga Diário com K6
 
 on:
-  schedule:
-    - cron: '27 11 * * *'  # Todos os dias às 08:00 UTC
-  workflow_dispatch:     # Permite executar manualmente
+  push:
+    branches:
+      - homologa
+      - master
+      - main
+
 
 jobs:
   k6-test:
