--- a/.github/workflows/workflow_K6.yaml
+++ b/.github/workflows/workflow_K6.yaml
@@ -1,38 +1,34 @@
-name: Teste de Diário com K6
+name: k6-test
 
 on:
-  push:
-    branches:
-      - homologa
-      - master
-      - main
-
+  schedule:
+    - cron: '10 11 * * *' # roda todos os dias às 11:10
+  workflow_dispatch:
 
 jobs:
-  k6-test:
+  test-k6:
     runs-on: ubuntu-latest
 
     steps:
       - name: Clonar repositório
-        uses: actions/upload-artifact@v4
+        uses: actions/checkout@v3
 
       - name: Instalar K6
         run: |
           sudo apt update
           sudo apt install -y gnupg software-properties-common
-          sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 33E65E213AF0FA9F
+          curl -s https://dl.k6.io/key.gpg | sudo gpg --dearmor -o /etc/apt/trusted.gpg.d/k6.gpg
           echo "deb https://dl.k6.io/deb stable main" | sudo tee /etc/apt/sources.list.d/k6.list
           sudo apt update
           sudo apt install -y k6
 
       - name: Rodar teste de carga com K6
-        run: k6 run teste.js
+        run: k6 run teste.js --out json=resultado.json
 
       - name: Gerar relatório HTML
         run: |
-          npm install -g k6-reporter
-          k6 run --summary-export=summary.json teste.js
-          k6-reporter --out=resultado.html summary.json
+          npm install -g xk6-reporter
+          xk6-reporter --json resultado.json --output resultado.html
 
       - name: Fazer upload do relatório
         uses: actions/upload-artifact@v4
