--- a/.github/workflows/workflow_K6.yaml
+++ b/.github/workflows/workflow_K6.yaml
@@ -7,7 +7,7 @@ on:
       - master
       - main
   schedule:
-      - cron: '50 14 * * *'  # Executa todos os dias às 12:00 UTC
+    - cron: '54 14 * * *'  # 11:50 horário de Brasília = 14:50 UTC
 
 jobs:
   test-k6:
