--- a/.github/workflows/workflow_K6.yaml
+++ b/.github/workflows/workflow_K6.yaml
@@ -7,7 +7,7 @@ on:
       - master
       - main
   schedule:
-    - cron: '10 16 * * *'  # Mantém um cron só
+    - cron: '20 16 * * *'
 
 jobs:
   test-k6:
