--- a/.github/workflows/workflow_K6.yaml
+++ b/.github/workflows/workflow_K6.yaml
@@ -7,7 +7,7 @@ on:
       - master
       - main
   schedule:
-    - cron: '15 18 * * *'
+    - cron: '40 18 * * *'
 
 jobs:
   test-k6:
@@ -29,11 +29,11 @@ jobs:
       - name: Rodar teste de carga com K6
         run: k6 run teste.js --out json=relatorio.json
 
-      # - name: Instalar xk6-reporter
-      #   run: npm install -g xk6-reporter
+      - name: Instalar xk6-reporter
+        run: npm install -g xk6-reporter
 
-      # - name: Gerar relatório HTML
-      #   run: xk6-reporter --json relatorio.json --output relatorio.html
+      - name: Gerar relatório HTML
+        run: xk6-reporter --json relatorio.json --output relatorio.html
 
       - name: Fazer upload do relatório
         uses: actions/upload-artifact@v4
